# LLM-training-inference-pipeline-hf

./: .gitignore  README.md  app.py  last_dataset_check.json  main.py  pyproject.toml  update_hf_dataset.py
.github/workflows/: auto-train.yml  last_dataset_check.json
_work/_PipelineMapping/svk-123/LLM-training-inference-pipeline-hf/: PipelineFolder.json
src/: check_dataset_update.py  deploy_model_to_hf.py  example_usage.py  register_and_deploy_hf.py  register_model_mlflow.py  train_llm.py  upload_model_to_hf.py
