[project]
name = "end-to-end-llm-pipeline-huggingface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dataset>=1.6.2",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "gradio>=5.38.2",
    "huggingface-hub>=0.34.1",
    "mlflow[extras]>=3.1.4",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "spaces>=0.39.0",
    "torch>=2.7.1",
    "transformers>=4.54.0",
    "trl>=0.19.1",
    "unsloth>=2025.7.2",
]
